# competitive-programming-library

./: README.md  body.cpp  generate.py  pyproject.toml
dijkstra/: dijkstra.cpp  dijkstra.py
fenwick/: fenwick.py
formatting/: fmt.cpp  fmt.py
misc/: misc.cpp
pbds/: pbds.cpp
quicksort/: qs.cpp  qs.py
union-find/: dsu.cpp  dsu.py
