[tool.poetry]
name = "complib-gen"
version = "0.1.0"
description = "Simple, opinionated tool that concatenates implementations of various algos into a single file for use in various online judges"
authors = ["Bryan Kok <bryan.wyern1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
